clang/test/BSC/Negative/Ownership/Owned/owned_funcPtr2/owned_funcPtr2.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

int myadd(int* a, int* b) {
    return *a + *b;
}


typedef int (*FTP)(int*);
typedef int (*FTPO)(int* owned);

void test() {
    FTP ftp1 = myadd;   
    FTPO ftpo1 = myadd; //expected-error {{cannot cast 'FTPO' (aka 'int (*)(int *owned)') to 'int (int *, int *)'}}
}